--- a/resources/assets/scss/main.scss
+++ b/resources/assets/scss/main.scss
@@ -8,7 +8,7 @@
 /* foo */
 
 .row {
-	margin: 1em 0;
+	margin: 0.5em 0;
 	//border: 2px dashed gray;
 }
 
@@ -16,25 +16,22 @@
 	margin: 0.5em 0;
 }
 
-.col-inner {
-	//border: 2px dashed orange;
-}
-
-.meta {
+.lb-meta {
 	padding: 0.5em;
+	font-size: 0.8em;
 	background: #ddd;
 	@include cf;
 }
 
-.meta-left {
+.lb-meta-left {
 	float: left;
 }
 
-.meta-right {
+.lb-meta-right {
 	float: right;
 }
 
-.addButton {
+.lb-addButton {
 	display: block;
 	width: 100%;
 	box-sizing: border-box;
