Fixed column style glitches and conflicts between Layout Builder and Bootstrap

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -5953,10 +5953,8 @@ button.close {
   .lb-field-list-item-meta:after {
     clear: both; }
 
-.row {
-  margin: 0.5em 0; }
-
-.col {
+.lb-row,
+.lb-col {
   margin: 0.5em 0; }
 
 .lb-meta {
