--- a/resources/assets/scss/main.scss
+++ b/resources/assets/scss/main.scss
@@ -12,6 +12,12 @@
 	margin: 0.5em 0;
 }
 
+// for demo purposes
+.row {
+	margin-top: 0.5em;
+	margin-bottom: 0.5em;
+}
+
 .lb-meta {
 	margin: 0.5em 0;
 	padding: 0.5em;
