--- a/public/css/main.css
+++ b/public/css/main.css
@@ -5957,6 +5957,10 @@ button.close {
 .lb-col {
   margin: 0.5em 0; }
 
+.row {
+  margin-top: 0.5em;
+  margin-bottom: 0.5em; }
+
 .lb-meta {
   margin: 0.5em 0;
   padding: 0.5em;
