Commented out unnecessary Bootstrap components Removed skeleton and normalize partials Fixed columns not being able to be dragged across different rows

--- a/resources/assets/scss/main.scss
+++ b/resources/assets/scss/main.scss
@@ -1,7 +1,5 @@
-//@import 'vendor/normalize';
-@import 'vendor/jquery-ui.structure';
-//@import 'vendor/skeleton';
 @import 'vendor/bootstrap';
+@import 'vendor/jquery-ui.structure';
 
 @import 'partials/mixins';
 
@@ -14,6 +12,10 @@
 	img {
 		max-width: 100%;
 	}
+}
+
+.lb-cols {
+	@include clearfix;
 }
 
 // for demo purposes
