--- a/public/css/main.css
+++ b/public/css/main.css
@@ -1340,10 +1340,6 @@ pre {
 .lb-cols:after {
   clear: both; }
 
-.row {
-  margin-top: 0.5em;
-  margin-bottom: 0.5em; }
-
 .lb-meta {
   margin: 0.5em 0;
   padding: 0.5em;
@@ -1354,6 +1350,10 @@ pre {
     display: table; }
   .lb-meta:after {
     clear: both; }
+  .lb-meta input,
+  .lb-meta select {
+    width: auto;
+    padding: 0; }
 
 .lb-meta-left {
   float: left; }
