--- a/resources/assets/scss/main.scss
+++ b/resources/assets/scss/main.scss
@@ -18,18 +18,19 @@
 	@include clearfix;
 }
 
-// for demo purposes
-.row {
-	margin-top: 0.5em;
-	margin-bottom: 0.5em;
-}
-
 .lb-meta {
 	margin: 0.5em 0;
 	padding: 0.5em;
 	font-size: 0.8em;
 	background: #ddd;
 	@include cf;
+
+	input,
+	select {
+		// reset default input styles that may break our meta fields
+		width: auto;
+		padding: 0;
+	}
 }
 
 .lb-meta-left {
