--- a/resources/assets/scss/main.scss
+++ b/resources/assets/scss/main.scss
@@ -5,6 +5,16 @@
 
 @import 'components/fields';
 
+.lb-builder {
+	input,
+	textarea,
+	select {
+		// reset default input styles that may break our meta fields
+		width: auto;
+		padding: 0;
+	}
+}
+
 .lb-row,
 .lb-col {
 	margin: 0.5em 0;
@@ -24,13 +34,6 @@
 	font-size: 0.8em;
 	background: #ddd;
 	@include cf;
-
-	input,
-	select {
-		// reset default input styles that may break our meta fields
-		width: auto;
-		padding: 0;
-	}
 }
 
 .lb-meta-left {
