--- a/public/css/main.css
+++ b/public/css/main.css
@@ -123,8 +123,7 @@ select {
   text-transform: none; }
 
 button,
-html input[type="button"],
-input[type="reset"],
+html input[type="button"], input[type="reset"],
 input[type="submit"] {
   -webkit-appearance: button;
   cursor: pointer; }
@@ -310,7 +309,8 @@ pre {
   padding: 15px;
   text-align: right;
   border-top: 1px solid #e5e5e5; }
-  .modal-footer:before, .modal-footer:after {
+  .modal-footer:before,
+  .modal-footer:after {
     content: " ";
     display: table; }
   .modal-footer:after {
@@ -334,15 +334,15 @@ pre {
   .modal-dialog {
     width: 600px;
     margin: 30px auto; }
-
   .modal-content {
     box-shadow: 0 5px 15px rgba(0, 0, 0, 0.5); }
-
   .modal-sm {
     width: 300px; } }
+
 @media (min-width: 992px) {
   .modal-lg {
     width: 900px; } }
+
 /*!
  * jQuery UI CSS Framework 1.11.4
  * http://jqueryui.com
@@ -554,7 +554,8 @@ pre {
   padding: 0.5em;
   font-size: 0.8em;
   background: #ddd; }
-  .lb-field-list-item-meta:before, .lb-field-list-item-meta:after {
+  .lb-field-list-item-meta:before,
+  .lb-field-list-item-meta:after {
     content: ' ';
     display: table; }
   .lb-field-list-item-meta:after {
@@ -577,9 +578,11 @@ pre {
   .lb-col img {
     max-width: 100%; }
 
-.lb-cols:before, .lb-cols:after {
+.lb-cols:before,
+.lb-cols:after {
   content: " ";
   display: table; }
+
 .lb-cols:after {
   clear: both; }
 
@@ -588,7 +591,8 @@ pre {
   padding: 0.5em;
   font-size: 0.8em;
   background: #ddd; }
-  .lb-meta:before, .lb-meta:after {
+  .lb-meta:before,
+  .lb-meta:after {
     content: ' ';
     display: table; }
   .lb-meta:after {
