Early stage of skinning the layout builder. 1. Header and Footer Bar. 2. Meta Box Header : Title, Slug, Languages and Save menu. 3. Some improvements on the elements.

--- a/resources/assets/scss/components/_fields.scss
+++ b/resources/assets/scss/components/_fields.scss
@@ -31,6 +31,14 @@
 		}
 	}
 
+	input[type="text"],
+	input[type="email"],
+	input[type="password"] {
+		background-color: $LB_inputBgColor;
+		border: none; 
+		padding: 0.5em 1em; 
+	}
+	
 	input[type="radio"],
 	input[type="radio"] + label,
 	input[type="radio"] + label > span,
@@ -55,6 +63,10 @@
 	input[type="radio"] + label,
 	input[type="checkbox"] + label {
 		margin-right: 0.75em;
+	}
+	
+	select {
+		padding: 0.5em 1em; 
 	}
 }
 
