--- a/resources/assets/css/main.css
+++ b/resources/assets/css/main.css
@@ -123,7 +123,8 @@ select {
   text-transform: none; }
 
 button,
-html input[type="button"], input[type="reset"],
+html input[type="button"],
+input[type="reset"],
 input[type="submit"] {
   -webkit-appearance: button;
   cursor: pointer; }
@@ -314,8 +315,7 @@ pre {
   padding: 15px;
   text-align: right;
   border-top: 1px solid #e5e5e5; }
-  .modal-footer:before,
-  .modal-footer:after {
+  .modal-footer:before, .modal-footer:after {
     content: " ";
     display: table; }
   .modal-footer:after {
@@ -550,6 +550,12 @@ pre {
     .lb-field-value input:first-child,
     .lb-field-value textarea:first-child {
       margin-top: 0; }
+  .lb-field-value input[type="text"],
+  .lb-field-value input[type="email"],
+  .lb-field-value input[type="password"] {
+    background-color: #e4e4e4;
+    border: none;
+    padding: 0.5em 1em; }
   .lb-field-value input[type="radio"],
   .lb-field-value input[type="radio"] + label,
   .lb-field-value input[type="radio"] + label > span,
@@ -568,6 +574,8 @@ pre {
   .lb-field-value input[type="radio"] + label,
   .lb-field-value input[type="checkbox"] + label {
     margin-right: 0.75em; }
+  .lb-field-value select {
+    padding: 0.5em 1em; }
 
 .lb-field-list-item {
   margin-top: 0.5em; }
@@ -578,8 +586,7 @@ pre {
   padding: 0.5em;
   font-size: 0.8em;
   background: #ddd; }
-  .lb-field-list-item-meta:before,
-  .lb-field-list-item-meta:after {
+  .lb-field-list-item-meta:before, .lb-field-list-item-meta:after {
     content: ' ';
     display: table; }
   .lb-field-list-item-meta:after {
@@ -589,11 +596,57 @@ pre {
   display: block;
   max-width: 50%; }
 
-.lb-builder input,
-.lb-builder textarea,
-.lb-builder select {
-  width: auto;
-  padding: 0; }
+.lb-builder .lb-metabox {
+  background-color: #f3f3f3;
+  padding-top: 35px;
+  padding-bottom: 35px; }
+  .lb-builder .lb-metabox:before, .lb-builder .lb-metabox:after {
+    content: ' ';
+    display: table; }
+  .lb-builder .lb-metabox:after {
+    clear: both; }
+  .lb-builder .lb-metabox .lb-field-value {
+    padding: 0; }
+  .lb-builder .lb-metabox select {
+    padding: 0.5em 1em; }
+
+.lb-metabox-title-slug .lb-fields,
+.lb-metabox-title-slug .lb-field,
+.lb-field-language .lb-fields,
+.lb-field-language .lb-field {
+  display: block; }
+
+.lb-metabox-title-slug .lb-field,
+.lb-field-language .lb-field {
+  float: left;
+  margin-right: 35px; }
+
+.lb-metabox-title-slug .lb-field-label,
+.lb-field-language .lb-field-label {
+  font-weight: 600; }
+
+.lb-actions .btn {
+  font-size: 1em;
+  padding: 0.5em 1em; }
+
+.lb-header {
+  font-size: 1.571em;
+  padding: .5em 2.100em;
+  background-color: #000;
+  color: #fff; }
+
+footer {
+  background-color: #6f6e6e;
+  padding: 0.5em 3em;
+  color: #fff; }
+
+.lb-builder {
+  margin: 0 3em; }
+  .lb-builder input,
+  .lb-builder textarea,
+  .lb-builder select {
+    width: auto;
+    padding: 0; }
 
 .lb-row,
 .lb-col {
@@ -602,21 +655,25 @@ pre {
   .lb-col img {
     max-width: 100%; }
 
-.lb-cols:before,
-.lb-cols:after {
+.lb-cols:before, .lb-cols:after {
   content: " ";
   display: table; }
 
 .lb-cols:after {
   clear: both; }
 
+.lb-left {
+  float: left; }
+
+.lb-right {
+  float: right; }
+
 .lb-meta {
   margin: 0.5em 0;
   padding: 0.5em;
   font-size: 0.8em;
   background: #ddd; }
-  .lb-meta:before,
-  .lb-meta:after {
+  .lb-meta:before, .lb-meta:after {
     content: ' ';
     display: table; }
   .lb-meta:after {
@@ -633,10 +690,10 @@ pre {
     max-width: 100%; }
 
 .lb-addButton {
-  display: block;
-  width: 100%;
+  display: inline-block;
   box-sizing: border-box;
-  padding: 1em 0;
+  padding: 1em 2em;
   text-align: center;
   cursor: pointer;
-  border: 1px dashed orange; }
+  border: 2px dashed #cccccc;
+  border-radius: 6px; }
